<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kmitl.lab03.taweewong58070045.simplemydot.controller.EditDotActivity">

    <TextView
        android:id="@+id/editDotPreview"
        android:text="@string/edit_dot_preview"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <kmitl.lab03.taweewong58070045.simplemydot.view.DotView
        android:id="@+id/editDotView"
        android:layout_width="0dp"
        android:layout_height="160dp"
        android:background="#EEEEEE"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editDotPreview"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/editDotColor"
        android:text="@string/edit_dot_color"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="18dp"
        app:layout_constraintTop_toBottomOf="@+id/editDotView" />

    <Button
        android:id="@+id/colorPickerButton"
        android:background="@color/colorAccent"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:onClick="onClickColorPicker"
        app:layout_constraintBottom_toBottomOf="@+id/editDotColor"
        app:layout_constraintLeft_toRightOf="@+id/editDotColor"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/editDotRadius"
        android:text="@string/edit_dot_radius"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/editDotColor" />

    <EditText
        android:id="@+id/radiusEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toRightOf="@+id/editDotRadius"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/editDotRadius" />

    <Button
        android:id="@+id/applyButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/apply_button"
        app:layout_constraintRight_toLeftOf="@+id/confirmButton"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/confirm_button"
        android:onClick="onClickConfirm"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:text="@string/cancel_button"
        android:onClick="onClickCancel"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />

</android.support.constraint.ConstraintLayout>
